# pandb

./: .gitignore  README.md  pyproject.toml  setup.py
base/: mdbdatabase.py  mdbdirbase.py  mdbiobase.py  mdbparserawbase.py  mdbrawbase.py
dbid/: mdbidbase.py  mdbidmodval.py
gate/: __init__.py  gate.py  pandbgates.py
lib/albumoftheyear/: __init__.py  metadata.py  musicdbid.py  musicdbio.py  parserawdata.py  rawdbdata.py
lib/allmusic/: __init__.py  metadata.py  musicdbid.py  musicdbio.py  parserawdata.py  rawdbdata.py  utils.py
master/: __init__.py  basic.py  dbs.py  metas.py  params.py  paths.py  permdir.py
match/: __init__.py  albumreq.py  base.py  basic.py  counts.py  crossmatch.py  dataio.py  matchDBArtist.py  matchdb.py  matchid.py  matchlev.py  matchnames.py  mdbmatch.py  pandbmatch.py  params.py  pool.py  results.py  singlematch.py  utils.py
mdbbase/: __init__.py  mdbdatabase.py  mdbdirbase.py  mdbiobase.py  mdbrawbase.py
mdbid/: __init__.py  mdbidbase.py  mdbidmodval.py
mdbmaster/: params.py
mdbmatch/: masterMatchGate.py  matchArtistToDB.py  matchDBData.py  matchRunParams.py  matchUtils.py
mdbmeta/: __init__.py  base.py  basic.py  genre.py
mdbsummary/: summary.py
mdbutils/: __init__.py  mdbartistname.py  poolUtils.py
meta/: __init__.py  base.py  manualIgnoreDBIDs.yaml  media.py  search.py  summary.py  universal.py
musicdb/: __init__.py  ignoreid.py  metrics.py  musicdb.py  pandb.py  pandbio.py  utils.py
tests/: test_import.py  test_pandb.py  test_pandbio.py
utils/: __init__.py  parseutils.py  permdir.py  poolUtils.py  project.py
(+185 files in other folders)
