[tool.poetry]
name = "pandb"
version = "0.1.0"
description = ""
authors = ["tgadf <tgadfort@gmail.com>"]
readme = "README.md"
packages = [{include = "pandb", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
tabulate = "^0.9.0"
levenshtein = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
